--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Install Java
+      with:
+          java-version: '8'
       uses: actions/setup-java@v1
     - name: Install lein
       run: |
