--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       uses: actions/setup-java@v1
     - name: Install lein
       run: |
-        curl -L -o /usr/local/bin https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
+        curl -L -o /usr/local/bin/lein https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
         chmod +x /usr/local/bin/lein
         lein
     - name: Checkout code
