--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
       uses: actions/setup-java@v1
     - name: Install lein
       run: |
-        curl -L -o /usr/local/bin/lein https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
-        chmod +x /usr/local/bin/lein
+        curl -L -o lein https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
+        chmod +x lein
         lein
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Test
-      run: lein test
+      run: ./lein test
