--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,12 +8,15 @@ jobs:
       with:
           java-version: '8'
       uses: actions/setup-java@v1
-    - name: Install lein
-      run: |
-        curl -L -o ~/lein https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
-        chmod +x ~/lein
-        lein
+    - name: Install Clojure
+    - uses: DeLaGuardo/setup-clojure@master
+      with:
+        # To use Clojure CLI 1.10.1.561 based on tools.deps
+        cli: '1.10.1.469'
+        # leiningen and boot-cli can be installed as well
+        lein: 2.9.4
+        # For leiningen and boot you could use 'latest' version
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Test
-      run: ~/lein test
+      run: lein test
