--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
           java-version: '8'
       uses: actions/setup-java@v1
     - name: Install Clojure
-    - uses: DeLaGuardo/setup-clojure@master
+      uses: DeLaGuardo/setup-clojure@master
       with:
         # To use Clojure CLI 1.10.1.561 based on tools.deps
         cli: '1.10.1.469'
