--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,23 @@
 # https://circleci.com/docs/2.0/language-clojure/ for more details
 version: 2.1
 
+workflows:
+  build-deploy:
+    jobs:
+      - build:
+          filters:
+            tags:
+              only: /.*/
+
+      - deploy:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /Release-.*/
+          context:
+            - CLOJARS_DEPLOY
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -48,10 +65,71 @@ jobs:
       # run tests!
       - run: lein test
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - build
+  deploy:
+    docker:
+      # specify the version you desire here
+      - image: circleci/clojure:openjdk-8-lein-2.9.1
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/repo
+
+    environment:
+      LEIN_ROOT: "true"
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "project.clj" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "project.clj" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+         name: Install babashka
+         command: |
+           curl -s https://raw.githubusercontent.com/borkdude/babashka/master/install -o install.sh
+           sudo bash install.sh
+           rm install.sh
+      - run:
+          name: Install deployment-script
+          command: |
+            curl -s https://raw.githubusercontent.com/clj-commons/infra/main/deployment/circle-maybe-deploy.bb -o circle-maybe-deploy.bb
+            chmod a+x circle-maybe-deploy.bb
+      - run: lein deps
+
+      - run:
+          name: Setup GPG signing key
+          command: |
+            GNUPGHOME="$HOME/.gnupg"
+            export GNUPGHOME
+            mkdir -p "$GNUPGHOME"
+            chmod 0700 "$GNUPGHOME"
+              echo "$GPG_KEY" \
+               | base64 --decode --ignore-garbage \
+               | gpg --batch --allow-secret-key-import --import
+               gpg --keyid-format LONG --list-secret-keys
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "project.clj" }}
+      - run:
+         name: Deploy
+         command: |
+           GPG_TTY=$(tty)
+           export GPG_TTY
+           echo $GPG_TTY
+           ./circle-maybe-deploy.bb lein deploy clojars      
